frontend/funktion.fm.less
@linkColor: #1551b3;
@titleColor: #226;
@dateColor: #272727;
@fontSize: 14px;

.transition (@property, @duration, @style: cubic-bezier(0.860, 0.000, 0.070, 1.000) ) { -webkit-transition: @property @duration @style; -moz-transition: @property @duration @style; -ms-transition: @property @duration @style; transition: @property @duration @style; }
.translateY (@y:0) { -webkit-transform: translateY(@y); -moz-transform: translateY(@y); -ms-transform: translateY(@y); transform: translateY(@y); }

.unselectableMixin {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.fullScreenMixin {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.resetUlMixin {
  list-style: none;
  padding: 0;
  margin: 0;
}

html, body {
  margin: 0;
  padding: 0;
  overflow: hidden;
  font-family: 'helvetica_neue_lt_std35_thin', courier;
  font-size: @fontSize;
  width: 100%;
  height: 100%;
}

a {
  text-decoration: none;
  outline : none;
  color: @linkColor;
  cursor: pointer;

  img {
    outline : none;
  }
}

a:visited {
  color: @linkColor;
}

button {
  .unselectableMixin;
  cursor: pointer;
  outline : none;
  font-family: 'source_code_proextralight', courier;
}

img {
  border : 0;
}

audio {
  width: 100%;
}

iframe {
  background: no-repeat url('') center center;
}

.jspPane {

  >* { /* could also use the jScrollPane setting 'verticalGutter', but css is better */
    padding-right: 2em;
  }
}

.jspVerticalBar, .jspHorizontalBar {
  background-color: transparent;

  .jspTrack {
    background-color: rgba(255, 255, 255, 0.1);
  }
  .jspDrag {
    background-color: rgba(0, 0, 0, 0.5);
  }
}

.menuItem {
  .unselectableMixin;
  cursor: pointer;
  font-family: 'source_code_proextralight', courier;
}

#contactBody {
  font-family: 'source_code_proextralight', courier;
}

.hidden {
  display: none;
}

.clearfix {
  width: 100%;
  height: 0;
  clear: both;
}

svg {
  .fullScreenMixin;

  path {
    stroke-width: 1;
  }

  text {
    font-size: 200%;
    opacity: 0;
  }
}

/* Style for both landing menu and pages menus */
.menu {
  .resetUlMixin;

  li {
    .menuItem;
    a {
      text-decoration: none;
      color: white;
    }
  }

}

#mainPage {
  height: 100%;
  width: 100%;
}

header {
  display: none;
  z-index: 10;
  cursor: pointer;

  @buttonPadding: 0.8em;
  @fontSize: 250%;

  .navButtonMixin {
    background: none;
    border: 2px solid transparent;
    border-radius: 0.5em;
    font-size: @fontSize;

    &:active {
      border-color: grey;
    }
  }

  /* Set styles in the menu according to the currently active page */
  &.contact { display: none; }

  &.projects {
    .toggle { img.black { display: block; } }
    .menu { .projects button { text-decoration: underline; } }
  }

  &.news {
    .toggle { img.white { display: block; } }
    .menu { .news button { text-decoration: underline; } }
  }

  &.expanded {
    cursor: initial;

    &.projects {
      .toggle {
        img.white { display: block; }
        img.black { display: none; }
      }
    }

    nav {
      .translateY(0%);
    }
  }

  .toggle {
    .navButtonMixin;
    padding: @buttonPadding;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;

    img {
      display: none;
      height: 1.1em;
    }
  }

  nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;

    .transition(all, 300ms);
    .translateY(-100%);

    .menu {
      display: block;
      width: 100%;
      background-color: rgba(0, 0, 0, 0.85);
      text-align: right;

      li {
        display: inline-block;

        button {
          .navButtonMixin;
          min-width: 7em;
          color: #bbb;
          padding: @buttonPadding;
        }

        &:first-child {
          button {
            font-weight: bold;
          }
        }
      }
    }

  }
}

#modal {
  .fullScreenMixin;
  display: none;
  background-color: rgba(0, 0, 0, 0.7);
  cursor: url('../images/close-cursor.png'), auto;

  .content {
    cursor: initial;
    width: 50%;
    height: 100%;
    margin: auto;
    position: relative; /* to fix the offset introduced by jscrollpane */
    right: 3%;
    font-size: 150%;
    color: white;

    /* innerContent, to add jscrollpane */
    >div {
      background-color: black;
      padding: 2em;
      overflow: hidden;
      width: 100%;
      height: 100%;
    }

    .jspDrag {
      background-color: rgba(255, 255, 255, 0.7);
    }
  }
}

.newsMixin {
  height: 78%;
  margin-left: 27%;
  margin-top: 2.7%;
  overflow: auto;
  color: black;
}

/* class for post titles, post list titles, concerts titles */
.title {
  font-size: 180%;
  letter-spacing: -0.05em;
  color: @titleColor;
  font-family: 'source_code_proextralight', courier;
  a { color: @titleColor; }
  a:visited { color: @titleColor; }
}

#newsBody {
  .newsMixin;
  display: none;

  ul {
    .resetUlMixin;

    li {
      @dateWidth: 14%;
      display: block;
      margin-bottom: 0.5em;
      text-transform: uppercase;

      a {
        display: block;
        float: right;
        width: 98% - @dateWidth;
      }

      .date {
        display: block;
        float: left;
        width: @dateWidth;
        color: @dateColor;
      }
    }
  }

}

#postBody {
  .newsMixin;

  .post {
    height: 100%;
    font-size: 130%;

    .title {
      font-size: 170%;
    }

    .date {
      color: grey;
    }

    .social {
      margin-top: 0.2em;

      /* copy the layout for the twitter button */
      .facebook {
        display: inline-block;
        float: left;
        margin-right: 4px;
        font: normal normal normal 11px/18px 'Helvetica Neue',Arial,sans-serif;
        color: #333;
        border: 1px solid #ccc;
        font-weight: bold;
        text-shadow: 0 1px 0 rgba(255,255,255,.5);
        cursor: pointer;
        padding: 0 3px 0 2px;
        white-space: nowrap;
        background-color:#f8f8f8;
        background-image:-webkit-gradient(linear,left top,left bottom,from(#fff),to(#dedede));
        background-image:-moz-linear-gradient(top,#fff,#dedede);
        background-image:-o-linear-gradient(top,#fff,#dedede);
        background-image:-ms-linear-gradient(top,#fff,#dedede);
        background-image:linear-gradient(top,#fff,#dedede);
        border:#ccc solid 1px;
        -moz-border-radius:3px;
        -webkit-border-radius:3px;
        border-radius:3px;
        text-shadow:0 1px 0 rgba(255,255,255,.5);
        -webkit-user-select:none;
        -moz-user-select:none;
        -o-user-select:none;
        user-select:none;
        height:18px;
        max-width:98%;
        overflow:hidden;

        img {
          width: 15px;
          position: relative;
          top: 1px;
        }
        
        span {
          position: relative;
          bottom: 2px;
        }
      }
    }

    .highlight {
      font-size: 80%;
      background-color: rgba(255, 255, 255, 0.5);
    }

    #disqus_thread {
      margin-top: 2em;
    }

  }
}

#contactBody {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  padding: 1.5em 1.5em;
  font-size: 120%;

  > div {
    margin-bottom: 0.4em;
  }

  .title {
    font-size: 280%;
  }

  .social {
    margin-top: 0.8em;
  }

}

#projectsBody {
  .fullScreenMixin;
  display: none;
  overflow: none;

  @tileSize: 13em;

  #concertsList {
    width: 100%;
    height: 50%;
    text-align: right;
    position: absolute;
    top: 0;
    right: 0;

    ul {
      .resetUlMixin;
      margin-right: 0.9em;
      margin-top: 0.7em;
      text-transform: uppercase;
      li {
        .date {
          color: @dateColor;
        }
        .project {
          text-decoration: underline;
        }
      }
    }
  }

  #projectsList {
    position: absolute;
    bottom: 1%;
    left: 1%;
    width: 98%;
    overflow: auto;
    white-space: nowrap;

    .tile {
      padding-right: 0; /* override the hack used to get a vertical gutter in jsScrollPane */
      width: @tileSize;
      height: @tileSize;
      opacity: 0.7;
      color: white;
      display: inline-block;
      background-color: #000;
      cursor: pointer;
      overflow: hidden;
      font-family: 'source_code_proextralight', courier;
      white-space: normal;
      margin-right: 0.5em;

      &.expanded {
        opacity: 1;
        overflow: auto;
        .thumbnail { display: none; }
        .content { display: block; }
      }

      &:hover { opacity: 1; }

      .thumbnail {
        font-size: 150%;
        height: 100%;
        display: flex;
        justify-content: center; /* align horizontal */
        align-items: center; /* align vertical */
        text-align: center;
        background-size: 100%;

        .subtitle {
          background-color: rgba(0, 0, 0, 0.9);
          font-size: 80%;
          width: 100%;
        }
      }

      .content {
        display: none;
      }

    }

  }

}

